WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16056
Unicode not being interpreted correctly in Web Inspector source view
https://bugs.webkit.org/show_bug.cgi?id=16056
Summary
Unicode not being interpreted correctly in Web Inspector source view
Dominic Mitchell
Reported
2007-11-19 13:38:46 PST
Looking at this page, the Name: Αριστοτέλης Παγκαλτζής renders correctly. If you look at that name in the DOM view of web inspector, it's correct. However, if you look at the source code view of web inspector, it's wrong. It looks like it's being shown as ISO-8859-1 instead of UTF-8. This could be down to the page being application/xhtml+xml instead of text/html.
Attachments
Correctly rendered view of the page.
(61.56 KB, image/png)
2007-11-19 13:39 PST
,
Dominic Mitchell
no flags
Details
Correctly rendered view in the DOM inspector.
(103.37 KB, image/png)
2007-11-19 13:40 PST
,
Dominic Mitchell
no flags
Details
Incorrectly rendered in the source inspector.
(135.09 KB, image/png)
2007-11-19 13:40 PST
,
Dominic Mitchell
no flags
Details
proposed fix
(8.02 KB, patch)
2007-11-20 14:19 PST
,
Alexey Proskuryakov
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mitchell
Comment 1
2007-11-19 13:39:21 PST
Created
attachment 17407
[details]
Correctly rendered view of the page.
Dominic Mitchell
Comment 2
2007-11-19 13:40:00 PST
Created
attachment 17408
[details]
Correctly rendered view in the DOM inspector.
Dominic Mitchell
Comment 3
2007-11-19 13:40:43 PST
Created
attachment 17409
[details]
Incorrectly rendered in the source inspector.
Alexey Proskuryakov
Comment 4
2007-11-19 22:50:55 PST
Confirmed with
r27834
.
Alexey Proskuryakov
Comment 5
2007-11-20 14:19:20 PST
Created
attachment 17420
[details]
proposed fix
Adam Roben (:aroben)
Comment 6
2007-11-20 14:24:45 PST
Comment on
attachment 17420
[details]
proposed fix + if (resource->requestURL == resource->loader->requestURL()) { buffer = resource->loader->mainResourceData(); - else { + textEncodingName = resource->loader->frame()->document()->inputEncoding(); + } else { Don't need braces here + virtual String encoding() const; Can these methods return a const String&? Or are they returning transient Strings? r=me
David Kilzer (:ddkilzer)
Comment 7
2007-11-20 15:21:57 PST
(In reply to
comment #6
)
> (From update of
attachment 17420
[details]
[edit]) > + if (resource->requestURL == resource->loader->requestURL()) { > buffer = resource->loader->mainResourceData(); > - else { > + textEncodingName = > resource->loader->frame()->document()->inputEncoding(); > + } else { > > Don't need braces here
I think you DO need braces here. :)
Alexey Proskuryakov
Comment 8
2007-11-21 00:10:38 PST
Committed revision 27937.
Dominic Mitchell
Comment 9
2007-11-21 13:00:40 PST
Wow! Thanks for the quick attention!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug