WebCore/loader/CachedCSSStyleSheet.h
@@ -47,6 +47,7 @@ namespace WebCore {
         virtual void ref(CachedResourceClient*);
  
         virtual void setEncoding(const String&);
+        virtual String encoding() const;
         virtual void data(PassRefPtr<SharedBuffer> data, bool allDataReceived);
         virtual void error();
 
