WebCore/loader/CachedXBLDocument.h
@@ -49,6 +49,7 @@ namespace WebCore {
         virtual void ref(CachedResourceClient*);
         
         virtual void setEncoding(const String&);
+        virtual String encoding() const;
         virtual void data(Vector<char>&, bool allDataReceived);
         virtual void error();
         
