WebCore/page/InspectorController.cpp
@@ -186,7 +186,6 @@ struct InspectorResource : public RefCounted<InspectorResource> {
     HTTPHeaderMap responseHeaderFields;
     String mimeType;
     String suggestedFilename;
-    String textEncodingName;
     JSContextRef scriptContext;
     JSObjectRef scriptObject;
     long long expectedContentLength;
@@ -258,9 +257,11 @@ static JSValueRef addSourceToFrame(JSContextRef ctx, JSObjectRef /*function*/, J
         return undefined;
 
     RefPtr<SharedBuffer> buffer;
-    if (resource->requestURL == resource->loader->requestURL())
+    String textEncodingName;
+    if (resource->requestURL == resource->loader->requestURL()) {
         buffer = resource->loader->mainResourceData();
-    else {
+        textEncodingName = resource->loader->frame()->document()->inputEncoding();
+    } else {
         FrameLoader* frameLoader = resource->loader->frameLoader();
         if (!frameLoader)
             return undefined;
@@ -274,14 +275,11 @@ static JSValueRef addSourceToFrame(JSContextRef ctx, JSObjectRef /*function*/, J
             return undefined;
 
         buffer = cachedResource->data();
+        textEncodingName = cachedResource->encoding();
     }
 
     if (!buffer)
         return undefined;
-
-    String textEncodingName = resource->loader->overrideEncoding();
-    if (!textEncodingName)
-        textEncodingName = resource->textEncodingName;
 
     TextEncoding encoding(textEncodingName);
     if (!encoding.isValid())
@@ -987,7 +985,6 @@ static void updateResourceResponse(InspectorResource* resource, const ResourceRe
     resource->responseHeaderFields = response.httpHeaderFields();
     resource->responseStatusCode = response.httpStatusCode();
     resource->suggestedFilename = response.suggestedFilename();
-    resource->textEncodingName = response.textEncodingName();
 }
 
 void InspectorController::updateScriptResourceRequest(InspectorResource* resource)
